--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
             <h3 class="title-a">
               Portfolio
             </h3>
-            <p class="subtitle-a">
-              Below are my few big projects I have done individually.
-            </p>
+            <!--<p class="subtitle-a">
+              Below are my few projects highlighted I have done individually.
+            </p>-->
             <div class="line-mf"></div>
           </div>
         </div>
