--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="intro-title mb-4">I am Muhammad Basit Qamar</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Senior Android Developer, Senior Flutter Developer, Java | Kotlin | Dart</span><strong class="text-slider"></strong></p>
+          <p class="intro-subtitle"><span class="text-slider-items">Senior Android Developer, Senior Flutter Developer, Java | Kotlin | Dart | NodeJS | Python</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -367,7 +367,7 @@
                   <div class="socials">
                     <ul>
                       <li><a href="https://linkedin.com/in/abqamar88" target="_blank"><span class="ico-circle"><i class="ion-social-linkedin"></i></span></a></li>
-                      <li><a href="https://www.instagram.com/poeticechoes3" target="_blank"><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li>
+                      <li><a href="https://www.instagram.com/abqamar.dev" target="_blank"><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li>
                       <li><a href="https://x.com/abqamar" target="_blank"><span class="ico-circle"><i class="ion-social-twitter"></i></span></a></li>
                     </ul>
                   </div>
